# portfolio

./: .env-compose.example  .gitignore  README.md  compose.yaml  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  reindex_routes.py  routes-chatbot.py  routes_chatbot.py  routes_email.py
backend/app/core/: config.py
backend/app/models/: document_model.py
backend/app/services/: email_service.py
backend/app/services/rag/: cms_service.py  embedding_document_store.py  embedding_service.py  langchain_orchestrator.py  llm_processor.py  prepare_text.py  rag_pipeline.py  rag_prompts.py
backend/app/utils/: text_cleaner.py
cms/: .Dockerfile  .env.dev.example  .gitignore  package-lock.json  package.json
cms/config/: middlewares.ts  plugins.ts  server.ts
cms/src/components/card/: tag.json
cms/src/components/rag/: fetch.json  text.json
cms/src/components/tag/: tag.json
frontend/: .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/public/: robots.txt
frontend/public/markdown/: fallback.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/features/: ExternalLink.tsx  Header.tsx
frontend/src/components/session/: session.ts
frontend/src/components/style/: globals.css
frontend/src/lib/backend/: chatbot.ts  (+2 more)
frontend/src/types/: ChatMessage.ts  Contact.ts  ContactLink.ts  Experience.ts  Project.ts  Skill.ts  cms.ts
frontend/src/utils/: headerHeight.tsx  markdownLoader.tsx  useIsMobile.tsx
(+103 files in other folders)
