[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "chromadb>=1.1.1",
    "fastapi>=0.119.0",
    "huggingface-hub[hf-xet]>=0.35.3",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "langchain-mistralai>=0.2.12",
    "langgraph>=0.6.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "uvicorn>=0.37.0",
]
